# eurosat-ms-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
colab/: run_experiments.ipynb
configs/: _shared.md  e1_rgb.yaml  e2_multispectral.yaml  e3_indices.yaml  e4_rgbnir.yaml  e5a_rgb_scratch.yaml  e5b_ms_scratch.yaml  e6_ms.yaml  e6_rgb.yaml  e7_ssl4eo_all.yaml  e7b_ssl4eo_rgb.yaml
data/features/: C1_rgb_test.npz  C1_rgb_train.npz  C2_multispectral_test.npz  C2_multispectral_train.npz
data/manifests/: split_meta.json  test.csv  train.csv  val.csv
data/seg_labels/: River_River_1115.npy  River_River_1515.npy  River_River_2287.npy  River_River_253.npy  River_River_452.npy  River_River_585.npy  River_River_75.npy  River_River_84.npy  SeaLake_SeaLake_1350.npy  SeaLake_SeaLake_176.npy  SeaLake_SeaLake_465.npy  labels.json
data/stats/: train_stats.json
docs/: decisions.md
report/: report.tex
results/: subjective_sample_ids.json
results/metrics/: C1_rgb.json  C2_multispectral.json  C2_permutation_importance.csv  E1_rgb__s0.json  E1_rgb__s1.json  E1_rgb__s2.json  E2_multispectral__s0.json  E2_multispectral__s1.json  E2_multispectral__s2.json  E3_indices__s0.json  (+30 more)
scripts/: analyze.py  download_data.py  label_masks.py  make_band_figure.py  make_gradcam.py  make_manifests.py  make_report_gallery.py  run_all.sh  run_classical.py  run_experiment.py  run_segmentation.py  select_gallery.py
tests/: conftest.py  test_analysis.py  test_bands.py  test_data.py  test_evaluate.py  test_features.py  test_run_completeness.py  test_segmentation.py  test_subsample.py
(+56 files in other folders)
