[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eurosat-ms"
version = "0.1.0"
description = "RGB vs multispectral land-use classification on EuroSAT (Sentinel-2)"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
